src/objects/Targets__c.object
<CustomObject>
    <fields>
        <fullName>Dealer_Target__c</fullName>
        <formula>Eastern_Target__c  +  Northern_Target__c  +  Southern_Target__c  +  Western_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Target__c</fullName>
        <label>Direct Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eastern_Target__c</fullName>
        <label>Eastern Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Government_Target__c</fullName>
        <label>Government Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Large_Fleet_Target__c</fullName>
        <label>Large Fleet Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Series__c</fullName>
        <formula>Product__r.Model_Series__c</formula>
        <label>Model Series</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Northern_Target__c</fullName>
        <label>Northern Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_for_Profit_Target__c</fullName>
        <label>Not for Profit Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rental_Target__c</fullName>
        <label>Rental Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Month__c</fullName>
        <label>Reporting Month</label>
        <referenceTo>Reporting_Month__c</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Southern_Target__c</fullName>
        <label>Southern Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Series__c</fullName>
        <formula>Product__r.Sub_series__c</formula>
        <label>Sub Series</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Western_Target__c</fullName>
        <label>Western Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Target</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Product__c</columns>
        <columns>Model_Series__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Direct_Target__c</columns>
        <columns>Dealer_Target__c</columns>
        <columns>Eastern_Target__c</columns>
        <columns>Northern_Target__c</columns>
        <columns>Southern_Target__c</columns>
        <columns>Western_Target__c</columns>
        <columns>Government_Target__c</columns>
        <columns>Large_Fleet_Target__c</columns>
        <columns>Not_for_Profit_Target__c</columns>
        <columns>Rental_Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Channel_Targets</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Model_Series__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Government_Target__c</columns>
        <columns>Large_Fleet_Target__c</columns>
        <columns>Not_for_Profit_Target__c</columns>
        <columns>Rental_Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>Channel Targets</label>
    </listViews>
    <listViews>
        <fullName>Dealer_Targets</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Model_Series__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Northern_Target__c</columns>
        <columns>Southern_Target__c</columns>
        <columns>Western_Target__c</columns>
        <columns>Eastern_Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>Dealer Targets</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Target Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Product_Level</fullName>
        <active>true</active>
        <errorConditionFormula>Product__r.SFDC_Product_Level__c &lt;&gt; 1 &amp;&amp; Product__r.Do_Not_Enforce_Product_Level_Validation__c = FALSE</errorConditionFormula>
        <errorMessage>Select a vehicle at level 1 in the product hierarchy.</errorMessage>
    </validationRules>
</CustomObject>